--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,13 +7,17 @@ on :
 jobs:
     ci:
         runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                node-version: [20.x,18.x]
+
         steps:
             - name: Checkout repository
               uses: actions/checkout@v4 
             - name: Set up Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: 20
+                  node-version: ${{ matrix.node-version }}
                   cache: npm
             - name: Install dependencies
               run: npm ci
