--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,23 +5,32 @@ on :
     pull_request:
         branches: [ "main" ]
 jobs:
-    ci:
+    lint:
         runs-on: ubuntu-latest
-        strategy:
-            matrix:
-                node-version: [20.x,18.x]
-
         steps:
             - name: Checkout repository
               uses: actions/checkout@v4 
             - name: Set up Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: ${{ matrix.node-version }}
+                  node-version: 20
                   cache: npm
             - name: Install dependencies
               run: npm ci
             - name: Lint code
               run: npm run lint
+
+    test:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4 
+            - name: Set up Node.js
+              uses: actions/setup-node@v4
+              with:
+                  node-version: 20
+                  cache: npm
+            - name: Install dependencies
+              run: npm ci
             - name: Run tests
               run: npm run test
